--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mongodb todo</title>
   </head>
-  <body>
+  <body
+		style="
+			background-image: url('./src/assets/backgroundImg.png');
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
+		"
+	>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
